--- a/deploy/deployment_Helm/values.yaml
+++ b/deploy/deployment_Helm/values.yaml
@@ -1,16 +1,30 @@
 #values of deployment
 
-replicaCount: 3
+hello:
+  replicaCount: 3
+  image:
+    repository: public.ecr.aws/c3w1m1q2/hello_service_adarsh
+    tag: latest
+  service:
+    type: LoadBalancer
+    port: 3001
 
-image:
-  repository: public.ecr.aws/c3w1m1q2/hello_service_adarsh
-  tag: latest
-  pullPolicy: IfNotPresent
+profile:
+  replicaCount: 3
+  image:
+    repository: public.ecr.aws/c3w1m1q2/profile_service_adarsh
+    tag: latest
+  service:
+    type: LoadBalancer
+    port: 3002
 
-service:
-  name: hello
-  type: ClusterIP
-  port: 3001
-
+frontend:
+  replicaCount: 3
+  image:
+    repository: public.ecr.aws/c3w1m1q2/frontend_service_adarsh
+    tag: latest
+  service:
+    type: LoadBalancer
+    port: 3000
 
 
